--- a/mobile-app/src/pages/home/home.html
+++ b/mobile-app/src/pages/home/home.html
@@ -14,9 +14,12 @@
 
 
 <ion-content padding>
+
+    <ion-fab right bottom>
+      <button ion-fab color="orange"><ion-icon name="add"></ion-icon></button>
+    </ion-fab>
   
     <ion-list>
-
       <button ion-item (click)="optionMonitor()">
         <ion-card>
           <ion-item>
