--- a/mobile-app/src/pages/home/home.html
+++ b/mobile-app/src/pages/home/home.html
@@ -7,6 +7,11 @@
 <ion-header>
 
   <ion-navbar>
+
+      <button ion-button icon-only menuToggle>
+          <ion-icon name="menu"></ion-icon>
+      </button>
+      
     <ion-title>{{home}}</ion-title>
   </ion-navbar>
 
