--- a/mobile-app/src/pages/messaging/messaging.html
+++ b/mobile-app/src/pages/messaging/messaging.html
@@ -7,6 +7,9 @@
 <ion-header>
 
   <ion-navbar>
+      <button ion-button icon-only menuToggle>
+          <ion-icon name="menu"></ion-icon>
+      </button>
     <ion-title>Messages</ion-title>
   </ion-navbar>
 
@@ -17,82 +20,15 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-card class="neighbour-list">
-          <ion-navbar style="text-align:center">
-            <ion-title style="font-size:30px;"> Chat </ion-title>
-          </ion-navbar>
-          <div class="neighbour">
-            <ion-list sliding="true">
-              <ion-item>
-                <ion-avatar item-start>
-                  <img src="assets/userBlue.png">
-                </ion-avatar>
-                <h2>User 1</h2>
-                <h5 item-end> 9:45 pm </h5>
-              </ion-item>
-
-              <ion-item>
-                <ion-avatar item-start>
-                  <img src="assets/userOrange.png">
-                </ion-avatar>
-                <h2>User 2</h2>
-                <h5 item-end> 10:00 pm </h5>
-              </ion-item>
-
-              <ion-item>
-                <ion-avatar item-start>
-                  <img src="assets/userPink.png">
-                </ion-avatar>
-                <h2>User 3</h2>
-                <h5 item-end> 10:15 pm </h5>
-              </ion-item>
-
-              <ion-item>
-                <ion-avatar item-start>
-                  <img src="assets/userGray.png">
-                </ion-avatar>
-                <h2>User 4</h2>
-                <h5 item-end> 10:40 pm </h5>
-              </ion-item>
-
-            </ion-list>
-          </div>
-        </ion-card>
-      </ion-col>
-      <ion-col>
         <ion-card class="messages" itemend>
-          <ion-navbar style="text-align:center">
-            <ion-title style="font-size:30px;"> User 1 </ion-title>
-          </ion-navbar>
-
-          <ion-item>
-            <ion-avatar item-start>
-              <img src="assets/userBlue.png">
-            </ion-avatar>
-            <ion-item class="msg" item-start>
-              <p style="font-size:15px; color: black">{{friText}}</p>
-              <h6 item-end style="font-size:10px;"> 10:40 pm </h6>
-            </ion-item>
-          </ion-item>
-
-          <ion-item>
-            <ion-item class="myMsg" item-end>
-              <p style="font-size:15px; color: black">{{myText}}</p>
-              <h6 item-end style="font-size:10px;"> 10:40 pm </h6>
-            </ion-item>
-            <ion-avatar item-end>
-              <img src="assets/userBlue.png">
-            </ion-avatar>
-          </ion-item>
-
-          <ion-footer>
-            <ion-item>
-              <ion-input type="text" placeholder="Enter message...."></ion-input>
-              <button item-end (click)="sendMessage()">
-                <ion-icon name="send"></ion-icon>
-              </button>
-            </ion-item>
-          </ion-footer>
+            <ion-tabs>
+                <ion-tab-bar slot="bottom">
+                  <ion-tab-button tab="schedule">
+                    <ion-icon name="calendar"></ion-icon>
+                    <ion-label>Schedule</ion-label>
+                  </ion-tab-button>
+                </ion-tab-bar>
+              </ion-tabs>
         </ion-card>
       </ion-col>
     </ion-row>
