--- a/mobile-app/src/pages/profile/profile.html
+++ b/mobile-app/src/pages/profile/profile.html
@@ -7,6 +7,9 @@
 <ion-header>
 
   <ion-navbar>
+      <button ion-button icon-only menuToggle>
+          <ion-icon name="menu"></ion-icon>
+      </button>
     <ion-title>Profile</ion-title>
   </ion-navbar>
 
@@ -27,38 +30,37 @@
       </div>
 
       <ion-list>
-
         <ion-item-sliding>
         <ion-item>
           <ion-icon name="mail" item-start></ion-icon>
           Email
-          <b item-end>{{mail}}</b>
+          <b item-end class="user-detail">{{mail}}</b>
         </ion-item>
 
         <ion-item>
           <ion-icon name="transgender" item-start></ion-icon>
           Gender
-          <b item-end>{{gender}}</b>
+          <b item-end class="user-detail" >{{gender}}</b>
         </ion-item>
 
         <ion-item>
           <ion-icon name="call" item-start></ion-icon>
           Phone
-          <b item-end>{{phonenum}}</b>    
+          <b item-end class="user-detail">{{phonenum}}</b>    
         </ion-item>
 
         <ion-item>
           <ion-icon name="map" item-start></ion-icon>
           Address
-          <b item-end>{{address}}</b>    
+          <b item-end class="user-detail">{{address}}</b>    
         </ion-item>
 
         </ion-item-sliding>
       </ion-list>
-      
+<!--       
       <button ion-button full (click)="goToHouse()">
         <ion-icon name="home" item-start></ion-icon>
           Houses
-        </button>
+        </button> -->
     </ion-card>
 </ion-content>
