--- a/mobile-app/src/pages/popup-dialog/popup-dialog.html
+++ b/mobile-app/src/pages/popup-dialog/popup-dialog.html
@@ -5,8 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
+    <ion-buttons left>
+      <button ion-button icon-only  (click)="closeModal()">
+       <ion-icon name="arrow-back"></ion-icon>
+      </button>
+    </ion-buttons>
     <ion-title>{{type}}</ion-title>
   </ion-navbar>
 
@@ -17,6 +21,7 @@
 
   <ion-item>
     <ion-label>On/Off</ion-label>
-    <ion-toggle checked="false"></ion-toggle>
+    <ion-toggle></ion-toggle>
   </ion-item>
+
 </ion-content>
