--- a/mobile-app/src/pages/profile/profile.html
+++ b/mobile-app/src/pages/profile/profile.html
@@ -7,9 +7,9 @@
 <ion-header>
 
   <ion-navbar>
-      <button ion-button icon-only menuToggle>
-          <ion-icon name="menu"></ion-icon>
-      </button>
+    <button ion-button icon-only menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>Profile</ion-title>
   </ion-navbar>
 
@@ -17,20 +17,21 @@
 
 
 <ion-content padding>
-    <ion-card>
-      <div class="bg-image">
-          <ion-img style="
+  <ion-card>
+    <div class="bg-image">
+      <ion-img style="
           height: 150px !important;
           width: 150px !important;
           margin-top: 5%;
           background: none !important;
-          background-color :none !important;"  src="assets/ava.png" class="round-image"></ion-img>
-          <h1 style="margin-top: 5px; font-size: 30px; align-self: center">{{username}}</h1>
-          
-      </div>
+          background-color :none !important;"
+        src="assets/ava.png" class="round-image"></ion-img>
+      <h1 style="margin-top: 5px; font-size: 30px; align-self: center">{{username}}</h1>
 
-      <ion-list>
-        <ion-item-sliding>
+    </div>
+
+    <ion-list>
+      <ion-item-sliding>
         <ion-item>
           <ion-icon name="mail" item-start></ion-icon>
           Email
@@ -40,27 +41,27 @@
         <ion-item>
           <ion-icon name="transgender" item-start></ion-icon>
           Gender
-          <b item-end class="user-detail" >{{gender}}</b>
+          <b item-end class="user-detail">{{gender}}</b>
         </ion-item>
 
         <ion-item>
           <ion-icon name="call" item-start></ion-icon>
           Phone
-          <b item-end class="user-detail">{{phonenum}}</b>    
+          <b item-end class="user-detail">{{phonenum}}</b>
         </ion-item>
 
         <ion-item>
           <ion-icon name="map" item-start></ion-icon>
           Address
-          <b item-end class="user-detail">{{address}}</b>    
+          <b item-end class="user-detail">{{address}}</b>
         </ion-item>
 
-        </ion-item-sliding>
-      </ion-list>
-<!--       
+      </ion-item-sliding>
+    </ion-list>
+    <!--       
       <button ion-button full (click)="goToHouse()">
         <ion-icon name="home" item-start></ion-icon>
           Houses
         </button> -->
-    </ion-card>
+  </ion-card>
 </ion-content>
