device-create page and friend-list page added

--- a/mobile-app/src/pages/chat/chat.html
+++ b/mobile-app/src/pages/chat/chat.html
@@ -22,15 +22,15 @@
         </ion-avatar>
         <ion-item class="msg" item-start>
           <p style="font-size:15px; color: black">{{friText}}</p>
-          <h6 item-end style="font-size:10px;"> 10:40 pm </h6>
+          <h6 item-end style="font-size:10px;" class=""> 10:40 pm </h6>
         </ion-item>
       </ion-item>
 
       <ion-item no-lines>
-        <div class="myMsg" item-end>
+        <ion-item class="myMsg" item-end>
           <p style="font-size:15px; color: black">{{myText}}</p>
           <h6 item-end style="font-size:10px;"> 10:40 pm </h6>
-        </div>
+        </ion-item>
         <ion-avatar item-end>
           <img src="assets/userBlue.png">
         </ion-avatar>
@@ -40,17 +40,17 @@
         <ion-avatar item-start>
           <img src="assets/userBlue.png">
         </ion-avatar>
-        <div class="msg" item-start>
+        <ion-item class="msg" item-start>
           <p style="font-size:15px; color: black">{{friText}}</p>
           <h6 item-end style="font-size:10px;"> 10:40 pm </h6>
-        </div>
+        </ion-item>
       </ion-item>
 
       <ion-item no-lines>
-        <div class="myMsg" item-end>
+        <ion-item class="myMsg" item-end>
           <p style="font-size:15px; color: black">{{myText}}</p>
           <h6 item-end style="font-size:10px;"> 10:40 pm </h6>
-        </div>
+        </ion-item>
         <ion-avatar item-end>
           <img src="assets/userBlue.png">
         </ion-avatar>
