--- a/mobile-app/src/pages/home/home.html
+++ b/mobile-app/src/pages/home/home.html
@@ -21,7 +21,7 @@
 <ion-content padding>
 
   <ion-fab right bottom>
-    <button ion-fab color="orange">
+    <button ion-fab color="orange" (click)="addNew()">
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
