--- a/mobile-app/src/pages/messaging/messaging.html
+++ b/mobile-app/src/pages/messaging/messaging.html
@@ -19,7 +19,7 @@
 <ion-content padding>
 
     <ion-fab right bottom>
-        <button ion-fab color="orange">
+        <button ion-fab color="orange" (click)="newConversation()">
           <ion-icon name="text"></ion-icon>
         </button>
       </ion-fab>
