integrated signup page with backend

--- a/mobile-apps/ionic/src/pages/profile/profile.html
+++ b/mobile-apps/ionic/src/pages/profile/profile.html
@@ -47,6 +47,12 @@
           </ion-item-divider>
 
           <ion-item-divider color="light">
+            <ion-icon name="calendar" item-start></ion-icon>
+            <ion-label>Date of Birth</ion-label>
+            <b item-end class="user-detail">{{user.dob}}</b>
+          </ion-item-divider>
+
+          <ion-item-divider color="light">
             <ion-icon name="card" item-start></ion-icon>
             <ion-label>IC</ion-label>
             <b item-end class="user-detail">{{user.ic}}</b>
