--- a/mobile-apps/ionic/src/pages/chats/chats.html
+++ b/mobile-apps/ionic/src/pages/chats/chats.html
@@ -1,18 +1,47 @@
 <!--
-  Generated template for the MessagingPage page.
+  Generated template for the ChatsPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
 
+<ion-header>
+  <ion-navbar>
+    <ion-title>Chats</ion-title>
+  </ion-navbar>
+</ion-header>
+
+<ion-content>
+  <ion-list>
+    <ion-item-divider color="light">
+      <ion-icon name="search" size="small" item-start></ion-icon>
+      <ion-input placeholder="Search"></ion-input>
+    </ion-item-divider>
+
+    <ion-list-header>
+      <ion-label>Neighbors</ion-label>
+    </ion-list-header>
+
+    <ion-item>
+      <ion-list>
+        <ion-item *ngFor="let user of users" (click)="openChat(user.id)">
+          <ion-avatar item-start>
+            <img src="assets/userBlue.png">
+          </ion-avatar>
+          <h3>{{user.username}}</h3>
+        </ion-item>       
+      </ion-list>
+    </ion-item>
+  </ion-list>
+</ion-content>
+
+<!-- <ion-header>
   <ion-navbar>
     <button ion-button icon-only menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Messages</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
@@ -79,4 +108,4 @@
     </ion-item-options>
     </ion-item-sliding>
   </ion-list>
-</ion-content>
+</ion-content> -->
